--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 
   <style>
     body {
+      overflow: hidden;
       position: relative;
       background-color: #24242E;
       -webkit-background-size: cover;
